# repolens

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
src/repolens/: __init__.py  cli.py
src/repolens/ingest/: parse_repo_files.py  schema.py
tests/fixtures/sample_repo/src/: auth.py  config.py
tests/unit/: test_parse_repo_files.py
